Fix Chrome layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,12 @@
   margin: 0;
   padding: 0;
   scrollbar-width: none;
+  
   font-family: "Lexend Deca", sans-serif;
+}
+
+*::-webkit-scrollbar {
+  width: 0;
 }
 
 body {
