--- a/src/components/ImageGallery.css
+++ b/src/components/ImageGallery.css
@@ -26,7 +26,6 @@
   position: relative;
   cursor: pointer;
   overflow: hidden;
-  display: flex;
 }
 
 .add-to-album {
@@ -59,9 +58,10 @@
 }
 
 .image {
-  width: 100%;
   height: 100%;
+  width: 100%;
   transform-origin: center;
+  -webkit-transform-origin: center;
   object-fit: cover;
   transform: scale(1);
   transition: transform 500ms ease-in-out;
